kubernetes/audio-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-audio-file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-audio-file
  template:
    metadata:
      labels:
        app: api-audio-file
    spec:
      containers:
      - name: api-container
        image: library/audio-file-service:0.0.1-SNAPSHOT
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-audio-file
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-audio-file
