kubernetes/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-monolith
  labels:
    app: api-monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-monolith
  template:
    metadata:
      labels:
        app: api-monolith
    spec:
      containers:
      - name: api-monolith-container
        image: spotify-clone:3
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-monolith-service
  labels:
    app: api-monolith-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api-monolith
  sessionAffinity: None
